--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
    
-    <title>Capstone</title>
+    <title>Asia-population</title>
   </head>
   <body>
     <div id="root"></div>
